# CodeReview

./: .gitignore  pyproject.toml  setenv.sh  setup.cfg
src/CodeReview/Common/: RevisionVersion.py
src/CodeReview/GUI/LogBrowser/: LogBrowserMainWindow.py  LogTableModel.py
src/CodeReview/Repository/: Git.py
