[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
    "pycparser>=3.0",
    "pygit2>=1.19.1",
    "pygments>=2.19.2",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.18",
    "pyqt5-sip>=12.18.0",
    "pyyaml>=6.0.3",
]

[tool.setuptools]
ext-modules = [
  {name = "CodeReview.PatienceDiff._patiencediff_c", sources = ["src/CodeReview/PatienceDiff/_patiencediff_c.c"]},
  {name = "CodeReview.TextDistance.levenshtein_distance_c", sources = ["src/CodeReview/TextDistance/levenshtein_distance.c"]},
]
